Add check on reward batch status in updateInvoiceTransaction api